fixed width gap

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -7,13 +7,14 @@ body, html{
 #game-wrapper{
   margin: auto;
   padding: 0px;
-  width: 510px;
+  width: 100%;
+  max-width: 510px;
 }
 
 #game-container{
   float: left;
   width: 100%;
-  border-radius: 5px;
+  border-radius: 10px;
   border: 5px solid white;
 }
 
@@ -73,4 +74,8 @@ body, html{
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+.fading{
+  visibility: hidden;
 }
